# selendra-polkadot

./: README.md
node/: Cargo.toml
node/src/: chain_spec.rs  command.rs  main.rs  rpc.rs  service.rs  shell_upgrade.rs
primitive/: Cargo.toml
primitive/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: constants.rs  lib.rs
script/: init.sh
vendors/frontier/client/consensus/: Cargo.toml
vendors/frontier/client/db/: Cargo.toml
vendors/frontier/client/mapping-sync/: Cargo.toml
vendors/frontier/client/rpc/: Cargo.toml
vendors/frontier/client/rpc/src/: eth.rs  lib.rs
vendors/frontier/frame/base-fee/: Cargo.toml
vendors/frontier/frame/dynamic-fee/: Cargo.toml
vendors/frontier/frame/ethereum/: Cargo.toml
vendors/frontier/frame/ethereum/src/: lib.rs
vendors/frontier/frame/evm/: Cargo.toml
vendors/frontier/frame/evm/accounts/: Cargo.toml
vendors/frontier/frame/evm/precompile/blake2/: Cargo.toml
vendors/frontier/frame/evm/precompile/bn128/: Cargo.toml
vendors/frontier/frame/evm/precompile/curve25519/: Cargo.toml
vendors/frontier/frame/evm/precompile/dispatch/: Cargo.toml
vendors/frontier/frame/evm/precompile/ed25519/: Cargo.toml
vendors/frontier/frame/evm/precompile/modexp/: Cargo.toml
vendors/frontier/frame/evm/precompile/sha3fips/: Cargo.toml
vendors/frontier/frame/evm/precompile/simple/: Cargo.toml
vendors/frontier/frame/evm/src/: lib.rs
vendors/frontier/primitives/consensus/: Cargo.toml
vendors/frontier/primitives/evm/: Cargo.toml
vendors/frontier/primitives/rpc/: Cargo.toml
vendors/frontier/primitives/self-contained/: Cargo.toml
